--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   google_sign_in: ^6.1.0
   google_sign_in_web: ^0.12.0
   flutter_facebook_auth: ^3.5.0
+  shared_preferences: ^2.0.8
+  cloud_firestore: ^4.7.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
