--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_facebook_auth: ^3.5.0
   shared_preferences: ^2.0.8
   cloud_firestore: ^4.7.1
+  sqflite: any
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
