--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,13 @@ dependencies:
   flutter_facebook_auth: ^3.5.0
   shared_preferences: ^2.0.8
   cloud_firestore: ^4.7.1
-  sqflite: any
+  sqflite: ^2.2.8+4
   path: ^1.8.3
+  drift: ^2.8.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.0
+  path_provider: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.0.0
 
 
 flutter:
