--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   path_provider: ^2.0.2
   flutter_svg: ^2.0.6
   status_change: ^2.0.0
+  image_picker: ^0.8.7+5
+  firebase_storage: ^11.2.1
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +63,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   hive_generator: ^2.0.0
   build_runner: ^2.0.0
-
 
 flutter:
 
