--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   status_change: ^2.0.0
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.1
+  cloudinary_public: ^0.21.0
 
 dev_dependencies:
   flutter_test:
