--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.1
   cloudinary_public: ^0.21.0
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
