--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,17 @@
-version: '3'
-services:
-  view-container:
-    build:
-      context: .
-      dockerfile: Dockerfile.view
-    ports:
-      - 80:80
-    restart: always
+version: "3.8"
 
-  logic-container:
+services:
+  frontend:
     build:
       context: .
-      dockerfile: Dockerfile.logic
+      dockerfile: Dockerfile
+    ports:
+      - 3000:3000
+    depends_on:
+      - backend
+
+  backend:
+    build:
+      context: backend
+    ports:
+      - 8000:8000
